# rl_sc_cluster

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  decision_matrix.csv  decision_matrix_pivot.csv  pyproject.toml  requirements.txt  training_time_estimates.csv
.github/workflows/: ci.yml  close-issues.yml
data/: data_processing.ipynb  data_validation.ipynb
docs/: mkdocs.yml  plan_resolution_action_fix.md
docs/docs/: getting-started.md  index.md  project_proposal_v2.md
docs/docs/about/: DOCUMENTATION_UPDATES.md  STAGE2_COMPLETE.md  STAGE3_COMPLETE.md  STAGE4_COMPLETE.md  STAGE5_COMPLETE.md  STAGE6_COMPLETE.md  changelog.md  license.md
docs/docs/api/: environment.md
docs/docs/dev/: code_style.md  contributing.md  setup.md  testing.md
docs/docs/environment/: README.md  action_implementation.md  design_decisions.md  development_plan.md  reward_calculation.md  state_representation.md
logs/ppo_test/PPO_1/: events.out.tfevents.1765408230.Shivams-MacBook-Pro-6.local.3239.0
notebooks/: test_state_and_metrics.ipynb
results/ppo_test-2KCells-20Epi/: episode_metrics.csv
results/ppo_test_100c_5ep/: episode_metrics.csv
results/ppo_test_1k_10ep/: episode_metrics.csv
rl_sc_cluster_utils/: __init__.py  dataset.py  features.py  plots.py
rl_sc_cluster_utils/environment/: __init__.py  actions.py  cache.py  clustering_env.py  rewards.py  state.py  utils.py
rl_sc_cluster_utils/modeling/: predict.py  train.py
scripts/: decision_matrix.py  estimate_training_times.py  run_environment_example.py  test_minimal_rl.py  test_ppo_minimal.py  test_real_data.py  test_rl_training.py
tests/: test_data.py
tests/env_test/: __init__.py  test_actions.py  test_clustering_env.py  test_rewards.py  test_state.py  test_utils.py
