[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rl_sc_cluster_utils"
version = "0.0.1"
description = "RL for scRNA-sq clustering with GAG-Sulfation-aware refinement"
authors = [
  { name = "Michael Haidar \u0026 Shivam Tyagi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "anndata>=0.9.0",
    "black",
    "flake8",
    "gymnasium>=0.29.0",
    "igraph>=0.10.0",
    "isort",
    "leidenalg>=0.9.0",
    "mkdocs",
    "numpy>=1.24.0",
    "pip",
    "pre-commit",
    "pytest",
    "python-dotenv",
    "scanpy>=1.9.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "tqdm",
    "typer",
]
requires-python = ">=3.10,<3.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["rl_sc_cluster_utils"]
force_sort_within_sections = true

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503"]

[tool.pylint]
[tool.pylint."MAIN"]
disable = ["C0330"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/"]
